--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,11 @@
+version: "3.9"
+
 services:
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+
   add-like:
     build:
       context: ./add-like
